--- a/election_models.ipynb
+++ b/election_models.ipynb
@@ -46,7 +46,7 @@
         "<h3>Introduction:</h3>\n",
         "\n",
         "\n",
-        "Economic and sociological factors have been widely used when making predictions on the voting results of US elections. Economic and sociological factors vary a lot among counties in the United States. In addition, as observed from the election map of recent elections, neighbor counties show similar patterns in terms of the voting results. In this project we will bring the power of machine learning to make predictions for the county-level election results using Economic and sociological factors and the geographic structure of US counties. </p>\n"
+        "Economic and sociological factors have been widely used when making predictions on the voting results of US elections. Economic and sociological factors vary a lot among counties in the United States. In addition, as observed from the election map of recent elections, neighbor counties show similar patterns in terms of the voting results. In this project we will bring the power of machine learning to make predictions for the county-level election results using Economic and sociological factors and the geographic structure of US counties.\n"
       ]
     },
     {
