--- a/election_models.ipynb
+++ b/election_models.ipynb
@@ -32,7 +32,7 @@
         "id": "oUITzFlDJcZ5"
       },
       "source": [
-        "<h2>Election Result Prediction for US Counties</h2>\n",
+        "<h2>2016 Election Modeling for U.S. Counties</h2>\n",
         "\n",
         "Vaed Prasad"
       ]
@@ -533,16 +533,9 @@
         "id": "qedg8Y9QJcZ7"
       },
       "source": [
-        "\n",
-        "2.4.1 *How did you preprocess the dataset and features?*\n",
-        "\n",
         "In order to clean the dataset and features, we first parsed the “MedianIncome” by removing commas and converting the data type from a string to a float. Next, we calculated each column’s mean and standard deviation in order to normalize the training data frame by subtracting the mean and dividing by the standard deviation for each entry in a given column. We also created a binary “winner” feature column by comparing the number of “GOP” votes and “DEM” votes in a given county, where 1 represents that the Democrats won the county and 0 represents that the Republicans won the county. Finally, we also normalized our test set with the training set’s mean and standard deviation.\n",
         "\n",
-        "2.4.2 *Which two learning methods from class did you choose and why did you made the choices?*\n",
-        "\n",
         "The two learning methods we chose from class was K-Nearest Neighbors and Soft-Margin Support Vector Machine. We selected K-Nearest Neighbors because we believed that counties with similar political voting patterns will be clustered near each other in the feature space. Similarly, we selected a Soft-Margin Support Vector Machine because we believed that the features would separate Republican counties from Democratic counties far enough to build an accurate support vector machine.\n",
-        "\n",
-        "2.4.3 *How did you do the model selection?*\n",
         "\n",
         "For both our K-Nearest Neighbors and Soft-Margin Support Vector Machine learning methods we leveraged k-fold validation by making 10 splits and selecting the trained model with the best accuracy. Then, we compared the accuracy of the best performing K-Nearest Neighbors model and Soft-Margin Support Vector Machine model and selected the SVM model as it yielded a better accuracy. Our model had a test performance of 70.36%."
       ]
